Created artifact and made minor changes.

--- a/src/PasswordGenerator.form
+++ b/src/PasswordGenerator.form
@@ -24,7 +24,7 @@
         </constraints>
         <properties>
           <name value=""/>
-          <text value="Password appears here"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="4963c" class="javax.swing.JCheckBox" binding="numCheckBox">
