--- a/src/PasswordGenerator.form
+++ b/src/PasswordGenerator.form
@@ -67,7 +67,7 @@
           <text value="Lowercase letters"/>
         </properties>
       </component>
-      <component id="5ad87" class="javax.swing.JCheckBox" binding="UppercaseCheckBox">
+      <component id="5ad87" class="javax.swing.JCheckBox" binding="uppercaseCheckBox">
         <constraints>
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
