--- a/src/PasswordGenerator.form
+++ b/src/PasswordGenerator.form
@@ -1,27 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="PasswordGenerator">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="14" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="11" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="568" height="400"/>
+      <xy x="20" y="20" width="603" height="287"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="202fd" class="javax.swing.JTextField" binding="passwordTextField">
-        <constraints>
-          <grid row="0" column="1" row-span="7" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <name value=""/>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="4963c" class="javax.swing.JCheckBox" binding="numCheckBox">
         <constraints>
-          <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Numbers"/>
@@ -29,31 +18,15 @@
       </component>
       <component id="6ba91" class="javax.swing.JCheckBox" binding="specialCharsCheckBox">
         <constraints>
-          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Special characters"/>
         </properties>
       </component>
-      <component id="d20de" class="javax.swing.JTextField" binding="lengthTextField">
-        <constraints>
-          <grid row="10" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="a9ed3" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Password length: "/>
-        </properties>
-      </component>
       <component id="b0712" class="javax.swing.JCheckBox" binding="lowercaseCheckBox">
         <constraints>
-          <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Lowercase letters"/>
@@ -61,45 +34,93 @@
       </component>
       <component id="5ad87" class="javax.swing.JCheckBox" binding="uppercaseCheckBox">
         <constraints>
-          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Uppercase letters"/>
         </properties>
       </component>
-      <component id="f44a8" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="0" row-span="7" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <horizontalAlignment value="4"/>
-          <text value="Your Password: "/>
-        </properties>
-      </component>
       <component id="83c" class="javax.swing.JButton" binding="createButton" default-binding="true">
         <constraints>
-          <grid row="7" column="0" row-span="3" col-span="5" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="3" col-span="11" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Create"/>
         </properties>
       </component>
+      <component id="f44a8" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <horizontalAlignment value="2"/>
+          <text value="Your Password: "/>
+        </properties>
+      </component>
+      <component id="202fd" class="javax.swing.JTextField" binding="passwordTextField">
+        <constraints>
+          <grid row="1" column="3" row-span="1" col-span="8" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="15"/>
+          </grid>
+        </constraints>
+        <properties>
+          <name value=""/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="3adfa" class="javax.swing.JButton" binding="copyButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="8" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="25" height="15"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Copy"/>
+        </properties>
+      </component>
+      <component id="a7505" class="javax.swing.JTextArea" binding="recentPasswordsTextArea">
+        <constraints>
+          <grid row="7" column="3" row-span="3" col-span="8" vsize-policy="4" hsize-policy="6" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="30"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
       <component id="ecec0" class="javax.swing.JLabel">
         <constraints>
-          <grid row="11" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="15" height="10"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Recent: "/>
         </properties>
       </component>
-      <component id="a7505" class="javax.swing.JTextArea" binding="recentPasswordsTextArea">
+      <component id="a9ed3" class="javax.swing.JLabel">
         <constraints>
-          <grid row="11" column="3" row-span="3" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
+          <grid row="6" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="35" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Password length: "/>
+        </properties>
+      </component>
+      <component id="d20de" class="javax.swing.JTextField" binding="lengthTextField">
+        <constraints>
+          <grid row="6" column="9" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="30" height="-1"/>
           </grid>
         </constraints>
         <properties/>
       </component>
+      <vspacer id="b8f5f">
+        <constraints>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
